--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,19 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
 }
+
+.header-left, .header-right{
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  gap: 8px;
+}
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +57,9 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex; 
+  justify-content: space-evenly;
+  gap: 8px;
+  padding: 0; 
+  margin: 0;
 }
